# Labs

./: README.md
Exam/: .gitignore  CMakeLists.txt  main.cpp
Exam/inc/: Header.hpp
Hehe/: CMakeLists.txt  README.md  main.cpp
Hehe/inc/: Header.hpp
Hehe/src/: Logger.cpp
Lab7/: CMakeLists.txt  ConsoleApplication1.cpp  README.md
Lab7/inc/: Functions.h
Lab7/src/: Functions.cpp
Lab8/: CMakeLists.txt  main.cpp
Lab9/: CMakeLists.txt  README.md
Practice_task2/: CMakeLists.txt  README.md  main.cpp
Practice_task3/: CMakeLists.txt  README.md
Practice_task5/: CMakeLists.txt  README.md  main.cpp
Practice_task6/: CMakeLists.txt  README.md
Practuce_task4/: CMakeLists.txt  README.md  main.cpp
Semester 3/Labs/AaSD/Lab_3/: CMakeLists.txt  main.cpp
Semester_1/Exam/: README.md
Semester_1/Lab7/: CMakeLists.txt  README.md  main.cpp
Semester_1/Lab8/: README.md  main.cpp
Semester_1/Lab9/: main.cpp
Semester_1/Practice_task3/: README.md  main.cpp
Semester_1/Practice_task5/: main.cpp
Semester_1/Practice_task6/: main.cpp
Semester_2/Lab_1/: CMakeLists.txt  README.md  main.cpp
Semester_2/Lab_2_HandmadeString/: CMakeLists.txt  README.md  main.cpp
Semester_2/Lab_3/: CMakeLists.txt  README.md  main.cpp
Semester_2/Lab_4/: CMakeLists.txt  README.md  main.cpp
Semester_2/Lab_6/: CMakeLists.txt  Logger.cpp  Logger.h  README.md  main.cpp
Semester_2/Lab_7/: CMakeLists.txt  README.md  main.cpp
Semester_2/Lab_8/: CMakeLists.txt  README.md  main.cpp
Semester_2/Practice_1/: CMakeLists.txt  README.md  main.cpp
Semester_2/Practice_2/: CMakeLists.txt  (+2 more)
(+72 files in other folders)
